WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219190
REGRESSION (
r259151
): The "Convert Text to Traditional Chinese" services menu action is broken
https://bugs.webkit.org/show_bug.cgi?id=219190
Summary
REGRESSION (r259151): The "Convert Text to Traditional Chinese" services menu...
Wenson Hsieh
Reported
2020-11-19 20:55:23 PST
<
rdar://problem/71438389
>
Attachments
Patch
(4.45 KB, patch)
2020-11-19 22:04 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-11-19 20:56:33 PST
WebPageProxy::readSelectionFromPasteboard gets denied due to the pasteboard access checks added in
r259151
...
Wenson Hsieh
Comment 2
2020-11-19 22:04:44 PST
Created
attachment 414650
[details]
Patch
EWS
Comment 3
2020-11-19 23:33:54 PST
Committed
r270072
: <
https://trac.webkit.org/changeset/270072
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414650
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug